--- a/esmvaltool/recipes/recipe_ocean_heat_content.yml
+++ b/esmvaltool/recipes/recipe_ocean_heat_content.yml
@@ -19,7 +19,7 @@ documentation:
 datasets:
   - {dataset: EC-Earth3-HR, institute: EC-Earth-Consortium, grid: gn,
      project: PRIMAVERA, exp: historical,  ensemble: r1i1p1f1,
-     start_year: 1900,  end_year: 1999
+     start_year: 1900,  end_year: 1999,
      mesh_file:  '/gws/nopw/j04/primavera1/masks/mesh_masks/EC-Earth-Consortium/mesh_mask_nemo.Ec3.2_O25L75.nc'}
   - {dataset: EC-Earth3-LR, institute: EC-Earth-Consortium, grid: gn,
      project: PRIMAVERA, exp: historical,  ensemble: r1i1p1f1, version: v20180501,
