Added new CMIP6 model to ECS recipe

--- a/esmvaltool/recipes/recipe_ecs.yml
+++ b/esmvaltool/recipes/recipe_ecs.yml
@@ -85,7 +85,9 @@ diagnostics:
         <<: *variable_settings
         project: CMIP6
     additional_datasets:
-      # Data only available for few models for now (04-02-2019)
+      # Data only available for few models for now (11-02-2019)
+      - {dataset: GISS-E2-1-G,  exp: piControl,    ensemble: r1i1p1f1, grid: gn, start_year: 4550, end_year: 4699}
+      - {dataset: GISS-E2-1-G,  exp: abrupt-4xCO2, ensemble: r1i1p1f1, grid: gn, start_year: 1850, end_year: 1999}
       - {dataset: IPSL-CM6A-LR, exp: piControl,    ensemble: r1i1p1f1, grid: gr, start_year: 1850, end_year: 1999}
       - {dataset: IPSL-CM6A-LR, exp: abrupt-4xCO2, ensemble: r1i1p1f1, grid: gr, start_year: 1850, end_year: 1999}
       - {dataset: MIROC6,       exp: piControl,    ensemble: r1i1p1f1, grid: gn, start_year: 3200, end_year: 3349}
