--- a/environment.yml
+++ b/environment.yml
@@ -6,19 +6,12 @@ channels:
 
 dependencies:
   # Python packages that cannot be installed from PyPI:
-  - iris=1.13
+  - iris
   - graphviz
   - matplotlib<3
   - python-stratify
   - esmpy
   # Multi language support:
   - ncl
-  - ncurses=6.1=hfc679d8_1
-  - julia>=1.0.3
+  - julia
   - r-base
-  - r-rcpp
-
-  - pip:
-      # TODO: include dummydata in esmvaltool repository and move to setup.py
-      # dummydata fetched from github as a zip file, contains latest version
-      - https://github.com/ESMValGroup/dummydata/archive/dev.zip
