--- a/esmvaltool/recipes/recipe_ocean_bgc.yml
+++ b/esmvaltool/recipes/recipe_ocean_bgc.yml
@@ -174,12 +174,12 @@ diagnostics:
     variables:
       thetao: # Temperature 3D
         preprocessor: prep_timeseries_global_volume_average
-        field: TO3Y
+        field: TO3M
         mip: Omon
         fx_files: [volcello,]
       so: # Salinity 3D
         preprocessor: prep_timeseries_global_volume_average
-        field: TO3Y
+        field: TO3M
         mip: Omon
         fx_files: [volcello,]
       no3: # nitrate
@@ -260,7 +260,7 @@ diagnostics:
         fx_files: [areacello, ]
       intpp:
         preprocessor: prep_global_Surface_average_timeseries_2D
-        field: TO3Y
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
       chl:
@@ -291,12 +291,12 @@ diagnostics:
     variables:
       thetao: # Temperature ocean surface
         preprocessor: prep_global_Surface_average_timeseries_3D
-        field: TO3Y
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
       so: # Salinity ocean surface
         preprocessor: prep_global_Surface_average_timeseries_3D
-        field: TO3Y
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
       no3: # Nitrate ocean surface
@@ -350,12 +350,12 @@ diagnostics:
     variables:
       thetao: # Temperature ocean surface
         preprocessor: prep_global_profile
-        field: TO3Y
+        field: TO2M
         mip: Omon
         fx_files: [volcello,]
       so: # Salinity ocean surface
         preprocessor: prep_global_profile
-        field: TO3Y
+        field: TO2M
         mip: Omon
         fx_files: [volcello,]
       no3: # Nitrate ocean surface
@@ -424,12 +424,12 @@ diagnostics:
     variables:
       thetao:
         preprocessor: prep_surface_map_regrid_3D
-        field: TO3Y
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
       so:
         preprocessor: prep_surface_map_regrid_3D
-        field: TO3Y
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
       no3:
@@ -469,12 +469,12 @@ diagnostics:
     variables:
       intpp:
         preprocessor: prep_surface_map_2D
-        field: TO3Y
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
       fgco2:
         preprocessor: prep_surface_map_2D
-        field: TO3Y
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
       chl:
@@ -509,12 +509,12 @@ diagnostics:
     variables:
       thetao:
         preprocessor: prep_transect_AMT
-        field: TO3Y
+        field: TO2M
         mip: Omon
         thresholds: [0., 5., 10., 15., 20., 25., 30.]
       so:
         preprocessor: prep_transect_AMT
-        field: TO3Y
+        field: TO2M
         mip: Omon
       no3:
         preprocessor: prep_transect_AMT
