--- a/esmvaltool/namelists/namelist_SeaIce.yml
+++ b/esmvaltool/namelists/namelist_SeaIce.yml
@@ -22,9 +22,9 @@
 ###############################################################################
 ---
 models:
-  - {model: ACCESS1-0,       project: CMIP5,  exp: historical,  ensemble: r1i1p1,  start_year: 1960,  end_year: 2005}
+#  - {model: ACCESS1-0,       project: CMIP5,  exp: historical,  ensemble: r1i1p1,  start_year: 2002,  end_year: 2005}
 
-  - {model: HadISST,  project: OBS,  type: reanaly, version: 20130524,  start_year: 1960,  end_year: 2005,  tier: 2}
+  - {model: HadISST,  project: OBS,  type: reanaly, version: 20130524,  start_year: 2002,  end_year: 2005,  tier: 2}
 
   
 preprocessors:
