--- a/esmvaltool/recipes/examples/recipe_check_obs.yml
+++ b/esmvaltool/recipes/examples/recipe_check_obs.yml
@@ -2,7 +2,7 @@
 documentation:
   description: |
     Test recipe for OBS, no proprocessor or diagnostics are applied,
-    just for testing the CMORization procedure.
+    just to check correct reading of the CMORized data.
 
   authors:
     - righ_ma
@@ -90,12 +90,103 @@ diagnostics:
     scripts: null
 
   ################################################
-#  - {dataset: ESACCI-LANDCOVER,     project: OBS,  tier: 2,  type: sat,     version: L4-LCCS-Map-300m-P5Y-aggregated-0.500000Deg, start_year: 1998,  end_year: 2012}
+
+  ESACCI-LANDCOVER:
+    description: ESACCI-LANDCOVER
+    variables:
+      baresoilFrac:
+        preproc: nopp
+        mip: Lmon
+        field: T2Ms        
+      cropFrac:
+        preproc: nopp
+        mip: Lmon
+        field: T2Ms        
+      grassFrac:
+        preproc: nopp
+        mip: Lmon
+        field: T2Ms        
+      shrubFrac:
+        preproc: nopp
+        mip: Lmon
+        field: T2Ms        
+      treeFrac:
+        preproc: nopp
+        mip: Lmon
+        field: T2Ms
+    additional_datasets:
+      - {dataset: ESACCI-LANDCOVER, project: OBS, tier: 2, type: sat, version: L4-LCCS-Map-300m-P5Y-aggregated-0.500000Deg, start_year: 1998, end_year: 2012}
+    scripts: null
+  
   ################################################
-#  - {dataset: ESACCI-SOILMOISTURE,  project: OBS,  tier: 2,  type: sat,     version: L3S-SSMV-COMBINED-v4.2,                      start_year: 2005,  end_year: 2011}
+
+  ESACCI-OZONE:
+    description: ESACCI-OZONE
+    variables:
+      toz:
+        preproc: nopp
+        mip: Amon
+        field: T2Ms               
+      tozStderr:
+        preproc: nopp
+        mip: Amon
+        field: T2Ms               
+      tro3prof:
+        preproc: nopp
+        mip: Amon
+        field: T2Ms               
+      tro3profStderr:
+        preproc: nopp
+        mip: Amon
+        field: T2Ms
+    additional_datasets:        
+      - {dataset: ESACCI-OZONE, project: OBS, tier: 2, type: sat, version: L3, start_year: 2005, end_year: 2011}
+    scripts: null
+
   ################################################
-#  - {dataset: ESACCI-SST,           project: OBS,  tier: 2,  type: sat,     version: L4-GHRSST-SSTdepth-OSTIA-GLOB,               start_year: 1992,  end_year: 2010}
+
+  ESACCI-SOILMOISTURE:
+    description: ESACCI-SOILMOISTURE
+    variables:
+      dos:
+        preproc: nopp
+        mip: Lmon
+        field: T2Ms        
+      dosStderr:
+        preproc: nopp
+        mip: Lmon
+        field: T2Ms        
+      sm:
+        preproc: nopp
+        mip: Lmon
+        field: T2Ms        
+      smStderr:
+        preproc: nopp
+        mip: Lmon
+        field: T2Ms              
+    additional_datasets:
+      - {dataset: ESACCI-SOILMOISTURE,  project: OBS,  tier: 2,  type: sat,     version: L3S-SSMV-COMBINED-v4.2,                      start_year: 2005,  end_year: 2011}
+    scripts: null
+      
   ################################################
+
+  ESACCI-SST:
+    description: ESACCI-SST
+    variables:
+      ts:
+        preproc: nopp
+        mip: Amon
+        field: T2Ms        
+      tsStderr:
+        preproc: nopp
+        mip: Amon
+        field: T2Ms        
+    additional_datasets:
+      - {dataset: ESACCI-SST, project: OBS, tier: 2, type: sat, version: L4-GHRSST-SSTdepth-OSTIA-GLOB, start_year: 1992, end_year: 2010}
+    scripts: null
+
+  ################################################
+
 #  - {dataset: HadISST,              project: OBS,  tier: 2,  type: reanaly, version: 1,                                           start_year: 1870,  end_year: 2017}
   ################################################
 #  - {dataset: NCEP,                 project: OBS,  tier: 2,  type: reanaly, version: 1,                                           start_year: 1948,  end_year: 2018}
@@ -110,7 +201,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
     additional_datasets:
-      - {dataset: PATMOS-x, project: OBS, tier: 2, type: sat, version: NOAA, start_year: 1982, end_year: 2018}
+      - {dataset: PATMOS-x, project: OBS, tier: 2, type: sat, version: NOAA, start_year: 1982, end_year: 1985}#2018}
     scripts: null
 
   ################################################
@@ -128,7 +219,7 @@ diagnostics:
   ################################################
 #  - {dataset: NIWA-BS,  project: OBS,  tier: 3,  type: sat,  version: v3.3,  start_year: 1979,  end_year: 2016}
   ################################################
-  CERES_mon:
+  CERES-mon:
     description: MODIS
     variables:
       rlds:
@@ -176,21 +267,21 @@ diagnostics:
     scripts: null
 
   ################################################
-  CERES_3hr:
+  CERES-3hr:
     description: MODIS
     variables:
       rlds:
         preproc: nopp
         mip: 3hr
         field: T2Ms
-#     rldscs:
-#       preproc: nopp
-#       mip: 3hr
-#       field: T2Ms
-#     rlus:
-#       preproc: nopp
-#       mip: 3hr
-#       field: T2Ms
+      rldscs:
+        preproc: nopp
+        mip: 3hr
+        field: T2Ms
+      rlus:
+        preproc: nopp
+        mip: 3hr
+        field: T2Ms
       # rluscs:
       #   preproc: nopp
       #   mip: 3hr
@@ -203,22 +294,22 @@ diagnostics:
       #   preproc: nopp
       #   mip: 3hr
       #   field: T2Ms
-#     rsds:
-#       preproc: nopp
-#       mip: 3hr
-#       field: T2Ms
-#     rsdscs:
-#       preproc: nopp
-#       mip: 3hr
-#       field: T2Ms
-#     rsus:
-#       preproc: nopp
-#       mip: 3hr
-#       field: T2Ms
-#     rsuscs:
-#       preproc: nopp
-#       mip: 3hr
-#       field: T2Ms
+      rsds:
+        preproc: nopp
+        mip: 3hr
+        field: T2Ms
+      rsdscs:
+        preproc: nopp
+        mip: 3hr
+        field: T2Ms
+      rsus:
+        preproc: nopp
+        mip: 3hr
+        field: T2Ms
+      rsuscs:
+        preproc: nopp
+        mip: 3hr
+        field: T2Ms
       # rsut:
       #   preproc: nopp
       #   mip: 3hr
