--- a/esmvaltool/recipes/recipe_cox18nature.yml
+++ b/esmvaltool/recipes/recipe_cox18nature.yml
@@ -69,7 +69,7 @@ diagnostics:
     scripts:
       psi:
         script: climate_metrics/psi.py
-        plot_ecs_regression: True
+        plot_ecs_regression: true
 
   diag_cox18nature:
     description: Plot emergent relationship between ECS ans psi.
